lesson7/css/article.css
html {
	font-family: Ubuntu, sans-serif;
	font-weight: 400;
}

body * {
	box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
	margin: 0;
}

.container {
	max-width: 1250px;
	margin: 0 auto;
	padding: 0 15px;
}

.article {
	padding-top: 80px;
	padding-bottom: 120px;
}

.article-title {
	max-width: 596px;
	margin-bottom: 40px;
	font-family: Oswald;
	font-weight: 600;
	line-height: 115%;
	text-transform: uppercase;
	color: #2c332f;
}

.article-title-large {
	font-size: 48px;
}

.article-title-medium {
	font-size: 36px;
}

.article-text {
	margin-bottom: 20px;
	font-weight: 400;
	font-size: 16px;
	line-height: 130%;
	color: #535755;
}

.article-mb1 {
	margin-bottom: 80px;
}
.article-mb2 {
	margin-bottom: 40px;
}
.article-decor-wrapper {
	position: relative;
}
.article-decor-wrapper::before {
	position: absolute;
	z-index: -1;
	content: "";
	background-image: url("../images/decor-icon.svg");
	width: 528px;
	height: 48px;
}
.decor-1::before {
	left: -350px;
	top: 100px;
}
.decor-2::before {
	right: -350px;
	bottom: 136px;
}
.play-button {
	padding: 0;
	width: 60px;
	height: 60px;
	background-color: rgb(12, 109, 255);
	border: none;
	border-radius: 50%;
	display: flex;
	align-items: center;
	justify-content: center;
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	cursor: pointer;
}
.article-img,
.article-video {
	width: 100%;
}

.article-list {
	margin-top: 0;
	padding-left: 19px;
}
::marker {
	font-size: 22px;
	color: #3596ed;
}
.article-item {
	margin-bottom: 12px;
}

.article-video {
	margin-bottom: 40px;
}

